/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java library project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.3/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the java-library plugin for API and implementation separation.
    id 'java-library'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // Use JUnit Jupiter for testing.
    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.3'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    testImplementation 'org.assertj:assertj-core:3.24.2'
    testImplementation 'org.mockito:mockito-core:5.5.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.5.0'

    implementation 'com.amazonaws:aws-lambda-java-core:1.2.2'
    implementation 'com.amazonaws:aws-lambda-java-events:3.11.0'
    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.553'
    implementation 'software.amazon.awssdk:s3:2.20.152'
    implementation 'org.json:json:20230618'

    implementation 'com.networknt:json-schema-validator:1.0.87'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
    // https://mvnrepository.com/artifact/org.slf4j/slf4j-nop
    implementation 'org.slf4j:slf4j-nop:2.0.9'
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

tasks.register('buildZip', Zip) {
    from compileJava
    from processResources
    into('lib') {
        from(jar)
        from configurations.runtimeClasspath
    }
}

test {
    useJUnitPlatform()
}

build.dependsOn buildZip
